--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -885,7 +885,69 @@ In conclusion, we found that the average first passage time is equal to the aver
 		where (*) implications hold for theorem \ref{lemma:MC_irreducible_fi0}.
 	\end{proof}
 
- -----DOING Random walks and MG1 ------
+\subsection{M/G/1}
+Let's now consider a queueing system where arrivals are markovian and there's only one server which acts with a generic proibability distribution. Let's then define the probability transition matrix as
+\begin{equation}\label{eq:mg1P}
+	P=\begin{pmatrix}
+ \color{red}{a_o}& \color{blue}{a_1} & \color[rgb]{0,0.7,0}{a_2} & \dots &\dots & \\
+ \color{red}{a_o}& \color{blue}{a_1} & \color[rgb]{0,0.7,0}{a_2}& \dots & \dots \\
+ 0  & \color{red}{a_o}& \color{blue}{a_1} & \color[rgb]{0,0.7,0}{a_2} & \dots \\
+ 0 & 0 & \color{red}{\ddots} & \color{blue}{\ddots} &\color[rgb]{0,0.7,0}{\ddots} \\
+\vdots & \ddots &\ddots & \color{red}{\ddots} & \color{blue}{\ddots} &\color[rgb]{0,0.7,0}{\ddots} \\
+
+\end{pmatrix}
+\end{equation}
+
+Let's now define the probability of moving to state $i$ in one step as
+\begin{esp}
+	\Pi_i &= \sum\limits_{j=0}^{+\infty} \pi_j \cdot P_{ji} \quad \forall i \\
+	\sum\limits_{i=0}^{+\infty} \pi_i &=1
+\end{esp}
+Looking at P in \eqref{eq:mg1P} we can simplify the previous equation as
+\begin{equation}
+	\Pi_i = \Pi_o \cdot a_i +  \sum\limits_{j=0}^{i+1} \pi_j \cdot a_{i-j+1}\quad i \ge 0
+\end{equation}
+We can then see all $\Pi_i$ and $a_i$ as two Laplace transform, which means
+\begin{esp}\label{eq:lsplaceMG1}
+	\Pi(s) &= \sum\limits_{i=0}^{+\infty} \pi_i \cdot s^i \\
+	A(s) &= \sum\limits_{i=0}^{+\infty} a_i \cdot s^i \\
+\end{esp}
+The generic term $a_{i+1}$ can be written as
+\begin{equation*}
+	\sum\limits_{i=0}^{+\infty} a_{i+1} \cdot s^i =\sum\limits_{i=1}^{+\infty} a_i \cdot s^{i-1} = \frac{A(s) - a_o}{s}
+\end{equation*}
+We can then write the convolution $()\pi * a) (i)$ as the product of the two Laplace transform calculated in equation \eqref{eq:lsplaceMG1}.
+
+We can then write the Laplace transform of the $\Pi$ as
+\begin{esp}
+	\Pi(s) &= \pi_o \cdot A(s) + \frac{A(s) \cdot \Pi(s) - \pi_o a_o}{s} -\frac{A(s) \cdot \pi_o - \pi_o a_o}{s} \\
+	s \cdot & \Pi(s) - A(s) \cdot \Pi(s) = \pi_o \cdot A(s) \cdot (s-1) \\
+	\Pi(s) &= \pi_o \cdot \frac{A(s)\cdot(s-1)}{s - A(s)}
+\end{esp}
+Letting s go to 1 and reminding that A(1)=1 we can write
+\begin{esp}\label{eq:s-to1}
+	1=\lim_{s\to 1} \Pi(s) &= \pi_o \cdot \lim_{s\to 1} \frac{s-1}{s-A(s)} \\
+	&=\pi_o \cdot \lim_{s\to 1} \left(1-\underbrace{\frac{A(s)-1}{s-1}}_{(1)}\right)^{-1} = \pi_o\cdot\left[1-A^{\prime}(1)\right]^{-1} = \frac{\pi_o}{1-A^\prime(1)}
+\end{esp}
+where $(1)$ can be seen as the definition of the derivative of A(s) calculated in s=1
+
+We can then define
+\begin{equation*}
+	A^\prime(1) = \rho = \sum\limits_{n=0}^{+\infty} n \cdot a_n
+\end{equation*}
+
+rewriting \eqref{eq:s-to1}, we can say:
+\begin{esp} \label{eq:pi0rho}
+	1&= \frac{\pi_o}{1-\rho} \\ \Rightarrow & \pi_o = 1-\rho
+\end{esp}
+In case $\pi_o \notin [0;1]$ there's no solution to the system.\\
+In conclusion we found that
+\begin{equation}\begin{cases}
+	0 \le \rho \le 1 & \Leftrightarrow \text{ positive recurrent} \\
+	\rho>1 & \implies \text{ transient}
+\end{cases}\end{equation}
+Where the second equation is one-direction only because we cannot say that if I cannot find a solution by guess, then there's no solution.
+
 \subsection{Random walks}
 Let $0,1,2,\dots$ be the states that keep track of the random walk. Let's now define the probability to advance in state and going back to the previous state as follows:
 \begin{esp}
@@ -926,8 +988,22 @@ Transient                                                     & $< +\infty$     
 \end{tabular}
 \end{table}
 
-\subsection{M/G/1}
---TODO--
+We can then study the result obtained with what we found in M/G/1 system. We can see the $P_{i j}$ as the $a_i$, so we derive:
+\begin{equation}
+	Z_i = \sum\limits_{j=1}^{+\infty} P_{i j} \cdot Z_j = \sum\limits_{j=1}^{+\infty} a_{j} \cdot Z_j=\sum\limits_{j=0}^{+\infty} a_{j} \cdot Z_{i+j-1}
+\end{equation}
+If we consider $Z_i = 1-s$ we obtain that
+\begin{equation}
+	1-s = \sum\limits_{j=0}^{+\infty} a_{j} \cdot (1-s^j) \stackrel{(1)}{=}\sum\limits_{j=1}^{+\infty} a_{j} \cdot (1-s^j) = 1-A(s)
+\end{equation}
+where $(1)$ is possible as $s^0=1$, so the first term of the sum is null.
+
+We then found out that $A(s)=s$. We can then calculate:
+\begin{equation}
+	1-s^i = \sum\limits_{j=0}^{+\infty} a_{j} \cdot (1-s^{i+j-1}) = 1-s^{i-1} \cdot A(s)
+\end{equation}
+
+but I don't know why. TODO!!
 
 \begin{theorem}[4.2, KT p. 95 (sufficient condition for recurrence)]
 	An irreducible \gls{mc} is recurrent if:
